--- a/dangerzone/website/style.css
+++ b/dangerzone/website/style.css
@@ -64,6 +64,7 @@ h1 {
    font-family: verdana;
 }
 
+   /*font-family: verdana;*/
 /* Table Entry  */
 .drinkname, .trade_craft{
    font-size: 24px;
